<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#407bdb">

    <!--this layout is for the form elements for db entry input process-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/rev_main_layout_container">

        <!--input for platform: uber lyft etc-->

        <!--input for date of revenue: defaults to current date when touched. should probably be changed to automatically inpout the current date without a need for user input-->


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="false"
            android:id="@+id/rev_top_row"
            android:gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_alignStart="@id/etxt_platform"
            android:layout_alignLeft="@+id/etxt_platform"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/platform_col"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Revenue Source:"
                    android:id="@+id/textView5"
                    android:textStyle="bold"
                    android:textColor="#ffffff"
                    android:layout_alignBaseline="@+id/etxt_date"
                    android:layout_alignBottom="@+id/etxt_date"
                    android:textAlignment="center"
                    android:layout_marginLeft="15dp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/revPlatformGroup">

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Uber"
                        android:id="@+id/radio_uber"
                        android:layout_above="@+id/etxt_date"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginTop="0dp" />

                    <RadioButton
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Lyft"
                        android:id="@+id/radio_lyft"
                        android:layout_above="@+id/etxt_date"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_marginLeft="0dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="DoorDash"
                        android:id="@+id/radio_doordash"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="0dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Postmates"
                        android:id="@+id/radio_postmates"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="0dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Roadie"
                        android:id="@+id/radio_curb"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="0dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wingz"
                        android:id="@+id/radio_wingz"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="0dp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rideshare"
                        android:id="@+id/radio_orderup"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Uzurv"
                        android:id="@+id/radio_uzurv"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fare"
                        android:id="@+id/radio_fare"
                        android:checked="false"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_below="@+id/linearLayout5"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/amt_tip_reset_row"
                android:layout_alignParentRight="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="20dp">

                <EditText
                    android:id="@+id/etxt_amt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_date"
                    android:hint="@string/amt"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/etxt_tip"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:hint="Tip"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:layout_alignBottom="@+id/linearLayout6"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/button_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    android:textColor="#407bdb"
                    android:background="#ffffff"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etxt_platform"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:hint="Platform"
            android:textStyle="bold"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/etxt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:nextFocusDown="@+id/etxt_amt"
            android:singleLine="true"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:visibility="invisible" />


    </RelativeLayout>

</ScrollView>